# gff_submission

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: INSDC GFF3 Specification - v0.5.docx  development-setup.md  mss-tools-integration.md  project_goal.txt  spec-v0.5-gap-review.md
experimental/: README.md  common.metadata.tsv  gff2mss_for_MP.py  gff2mss_for_MP_minimum.py  gff2mss_for_MP_nonredundant.py  gff2mss_for_MP_redundant_as_misc.py
hermes/: README.md
src/ddbj_gff/: __init__.py  aa_names.py  attributes.py  errors.py  io.py  model.py  parser.py  writer.py
tests/: test_attributes.py  test_errors.py  test_flatfile_convert.py  test_flatfile_mapping.py  test_flatfile_molecule.py  test_flatfile_synthesis.py  test_flatfile_trans_splicing.py  test_integration.py  test_io.py  test_model_circular_seqids.py  test_model_document.py  test_model_equality.py  test_model_feature.py  test_model_location.py  test_model_span.py  test_mss_cds.py  test_mss_cli.py  test_mss_config.py  test_mss_convert.py  test_mss_emit.py  test_mss_entry_features.py  test_mss_gaps.py  test_mss_gene_features.py  test_mss_integration.py  test_mss_location.py  test_mss_locus_tag.py  test_mss_misc_feature.py  test_mss_model.py  test_mss_mrna.py  test_mss_noncoding.py  test_mss_parentless_rna.py  test_mss_product.py  test_mss_pseudogene.py  test_mss_snapshot.py  test_mss_source.py  test_mss_translate.py  test_normalize.py  test_normalize_circular_origin.py  test_normalize_cli.py  test_normalize_config.py  (+33 more)
tests/fixtures/: attributes_escaping.gff3  (+8 more)
(+102 files in other folders)
