[project]
name = "ddbj-gff"
version = "0.1.0"
description = "INSDC/SO GFF3 canonicalization library (parser, object model, normalize, validate)"
requires-python = ">=3.11"
dependencies = ["biopython>=1.83"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddbj_gff"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = ["slow: integration/perf tests against large example files (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
addopts = "-m 'not slow'"
